--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "understrap-child",
+  "name": "los-rancheros-kiwanis-child",
   "version": "1.1.0",
   "description": "Basic Child Theme for Understrap Theme Framework: https://github.com/understrap/understrap",
   "main": "index.js",
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/understrap/understrap-child.git"
+    "url": "https://github.com/understrap/los-rancheros-kiwanis-child.git"
   },
   "keywords": [
     "wordpress",
@@ -38,7 +38,7 @@
   "author": "The Understrap Authors (https://github.com/understrap/understrap/graphs/contributors)",
   "license": "GPL-2.0",
   "bugs": {
-    "url": "https://github.com/understrap/understrap-child/issues"
+    "url": "https://github.com/understrap/los-rancheros-kiwanis-child/issues"
   },
   "homepage": "https://understrap.com",
   "dependencies": {},
